--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "http-status": "^1.3.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
     "nodemon": "^1.19.2"
   }
