--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "lint": "eslint src --ext .js"
   },
   "repository": {
     "type": "git",
@@ -20,11 +21,15 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "http-status": "^1.3.2",
+    "http-status": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.1",
-    "nodemon": "^1.19.2"
+    "mongoose": "^5.11.12",
+    "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
